feat. 운동일지 요약 데이터 스웨거 수정
